--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ border-style: solid;
 	color: #4aaaa5;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 }
-h3{
+#h3{
 	border-width: 0px 0px 3px 0px;
 	border-style: solid;
 	margin-right: 20px;
@@ -122,7 +122,7 @@ h3{
 	text-align: center;
 }
 
-footer {
+#indexfooter {
 clear: both;
 position : absolute;
 bottom : 0;
@@ -139,4 +139,247 @@ border-color: #4aaaa5;
 font-size: x-small;
 font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
+#boxportfolio{
+top: 90px; 
+width: 960px;
+height: 780px;
+background-color: #e8e1cf;
+position:relative;
+margin-left: 40px;
+border-width: 5px 0 0 0;
+border-color: #777777;
+border-style: solid;	
+}
+#mainframe{
+ position: absolute;
+	width: 500px;
+	height: 610px;
+	background-color: #ffffff;
+	margin-left: 44px;
+	margin-top: 50px;
+	border-color: #D9D3C4;
+	border-width: 2px 2px 2px 2px;
+	border-style: solid;   
+}
+#frame1{
+	position: relative;
+	float: left;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #cccccc;
+	margin: 20px 20px 20px 20px;
+	display: block;
+}
+#frame1 h3 {
+	position: absolute;
+	bottom: 00px;
+	text-align: right;
+	color: #ffffff;
+	background-color: #4aaaa5;
+	padding: 10px 35px 10px 40px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 15px;
+}
+#frame1pic{
+	display:block;
+}
 
+#frame2 {
+   display:block;
+	position: relative;
+	float: left;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #cccccc;
+	margin: 20px 20px 20px 20px;
+}
+#frame2 h3{
+   position: absolute;
+	bottom: 0px;
+	text-align: center;
+	color: #ffffff;
+	background-color: #4aaaa5;
+	padding: 10px 53px 10px 63.5px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 15px;
+}
+#frame2pic{
+	display: block;
+}
+#frame3{
+	position: relative;
+	float: left;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #cccccc;
+	margin: 20px 20px 20px 20px;
+}
+#frame3 h3{
+	position: absolute;
+	bottom: 0px;
+	text-align: center;
+	color: #ffffff;
+	background-color: #4aaaa5;
+	padding: 10px 45px 10px 60px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 15px;
+}
+
+#frame3pic{
+	display: block;
+}
+#frame4{
+	position: relative;
+	float: left;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #cccccc;
+	margin: 20px 20px 20px 20px;
+}
+#frame4 h3{
+	position: absolute;
+	bottom: 0px;
+	text-align: center;
+	color: #ffffff;
+	background-color: #4aaaa5;
+	padding: 10px 19.5px 10px 24px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 15px;
+}
+#frame4pic{
+	display: block;
+}
+#frame5{
+	position: relative;
+	float: left;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #cccccc;
+	margin: 20px 20px 20px 20px;
+}
+#frame5 h3{
+	position: absolute;
+	bottom: 0px;
+	text-align: center;
+	color: #ffffff;
+	background-color: #4aaaa5;
+	padding: 10px 20.5px 10px 23.5px;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 15px;
+}
+#frame5pic {
+	display: block;
+}
+#portfoliofooter {
+	clear: both;
+position : absolute;
+
+padding:10px;
+background-color:#666666;
+color: #E8E1E1;	
+margin-bottom: 0 auto;
+width: 960px;
+margin-left: 40px;
+text-align: center;
+border-width: 8px 0px 0px 0px;
+border-style: solid;
+border-color: #4aaaa5;
+font-size: x-small;
+font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+margin-top: 50px;
+}
+#contactbox{
+	top: 90px; 
+width: 960px;
+height: 700px;
+background-color: #e8e1cf;
+position:relative;
+margin-left: 40px;
+border-width: 5px 0 0 0;
+border-color: #777777;
+border-style: solid;
+}
+#contactinfo{
+	position: absolute;
+	width: 500px;
+	height: 590px;
+	background-color: #ffffff;
+	margin-left: 44px;
+	margin-top: 50px;
+	border-color: #D9D3C4;
+	border-width: 2px 2px 2px 2px;
+	border-style: solid;
+}
+#contact123{
+	color: #4aaaa5;
+	margin-left: 20px;
+    border-color: #777777;
+	border-width: 0px 0px 3px 0px;
+	border-style: solid;
+	margin-right: 20px;
+	border-color: #E5DEDE;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+}
+#fname{
+	width:100%;
+	padding: 12px 10px;
+	margin-bottom: 20px;
+	box-sizing: border-box;
+	float: left;
+
+
+}
+#email{
+width:100%;
+	padding: 12px 10px;
+	margin-bottom: 20px;
+	box-sizing: border-box;
+	float: left;
+}
+#name{
+	margin-top: 20px;
+}
+#formbody{
+margin-left: 20px;
+margin-right: 20px;
+}
+label{
+color:#777777;
+font-size: 125%;
+}
+#message {
+    width: 100%;
+    height: 200px;
+    padding: 115px 10px;
+    margin: 2px 40px 20px 0px;
+    box-sizing: border-box;
+    float: left;
+}
+#contactfooter{
+	clear: both;
+position : absolute;
+
+padding:10px;
+background-color:#666666;
+color: #E8E1E1;	
+margin-bottom: 0 auto;
+width: 960px;
+margin-left: 40px;
+text-align: center;
+border-width: 8px 0px 0px 0px;
+border-style: solid;
+border-color: #4aaaa5;
+font-size: x-small;
+font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+margin-top: 50px;
+}
+#submit{
+    width: 20%;
+    background-color: #4aaaa5;
+    color: white;
+    padding: 10px 5px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+}
