--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,11 +125,11 @@ border-style: solid;
 #indexfooter {
 clear: both;
 position : absolute;
-bottom : 0;
+bottom : 0 auto;
 padding:10px;
 background-color:#666666;
 color: #E8E1E1;	
-margin-bottom: 0 auto;
+
 width: 960px;
 margin-left: 40px;
 text-align: center;
@@ -138,7 +138,9 @@ border-style: solid;
 border-color: #4aaaa5;
 font-size: x-small;
 font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+margin-top: 90px;
 }
+
 #boxportfolio{
 top: 90px; 
 width: 960px;
@@ -381,5 +383,4 @@ margin-top: 50px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-}
 }
